# HomeworkChecker

./: .gitignore  HomeworkChecker.sln  README.md  Setup.sql
DataManager/: DataManager.vcxproj  DataManager.vcxproj.filters
DataManager/DMTest/: main.cpp
DataManager/DataManager/: CMakeLists.txt  DBManager.cpp  DBManager.hpp  DMError.cpp  DMError.hpp  DMUtils.cpp  DMUtils.hpp  DataManager.cpp  DataManager.hpp  test.cpp
DataManager/DataManager.xcodeproj/: project.pbxproj
DataManager2/DataManager/: DBManager.hpp  DMError.cpp  DMError.hpp  DataManager.cpp  DataManager.hpp  test.cpp
Documents/: DataManager.md  GUI.md  General.md  HomeworkCheckerServer.md  QQMessage.md  tree.md
HomeworkChecker.xcworkspace/: contents.xcworkspacedata
HomeworkCheckerServer/: CMakeLists.txt  HomeworkCheckerServer.cpp  HomeworkCheckerServer.vcxproj  HomeworkCheckerServer.vcxproj.filters
Mail/: CSmtp.cpp  Mail.vcxproj  Mail.vcxproj.filters  main.cpp
QQMessage/: Analyst.cpp  Analyst.h  CMakeLists.txt  Exception.cpp  Exception.h  File.cpp  File.h  FileInfo.cpp  FileInfo.h  PrivateMessageGetter.h  PrivateMessageSender.cpp  PrivateMessageSender.h  QQMessage.cpp  QQMessage.h  QQMessage.vcxproj  QQMessage.vcxproj.filters  Tools.cpp  Tools.h  WebsocketClient.cpp  WebsocketClient.h  WebsocketServer.cpp  WebsocketServer.h  源.cpp
Test/: Test.vcxproj  main.cpp
WebsocketClientForApp/: WebsocketClientForApp.cpp  WebsocketClientForApp.h  WebsocketClientForApp.vcxproj  WebsocketClientForApp.vcxproj.filters  main.cpp
go-cqhttp/: config.hjson  config.yml  start.cmd  start.lnk
lib/: QQMessage.idb
src/: 作业管理系统产品需求文档.docx
(+186 files in other folders)
